--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "react": "^19.0.0",
