--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-ui",
+  "name": "cagey",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "convert": "ts-node scripts/convert-data.ts"
+    "convert": "ts-node scripts/convert-data.ts",
+    "scrape": "cd python-app && python scrape_cage_movies.py",
+    "view-results": "cd python-app && python view_results.py"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
